--- a/doc.adoc
+++ b/doc.adoc
@@ -1,4 +1,5 @@
 == problem 
 
 * Navber Change korte hobe 
-* image path bosano baki  ache
+* image path bosano baki  ache abaout -done
+* book-index bosano baki ache
